fixing an issue with the bottom of the game getting cut off on small screens.

--- a/src/styles/container.css
+++ b/src/styles/container.css
@@ -26,4 +26,5 @@ body {
   align-items: center;
   width: 100%;
   gap: 0.5em;
+  margin-bottom: 5em;
 }
